agregar horarios de atencion en asignacion de turnos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/6e03e6e4-3d9b-4294-b178-dd5a181154f8.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/afdf1477-e476-4b58-b5af-2d8712946989.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/abdb3a07-b625-4e92-8e71-a7fdad8e8fbf.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/7b58980c-8082-4232-9018-a0c28bd3421e.vsidx
