--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/afdf1477-e476-4b58-b5af-2d8712946989.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/abdb3a07-b625-4e92-8e71-a7fdad8e8fbf.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/7b58980c-8082-4232-9018-a0c28bd3421e.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/bd192a43-655d-4d05-b370-34ce877aca06.vsidx
