--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/abdb3a07-b625-4e92-8e71-a7fdad8e8fbf.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/7b58980c-8082-4232-9018-a0c28bd3421e.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/bd192a43-655d-4d05-b370-34ce877aca06.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/39c4581c-8669-49ac-80c1-6dd7e2bf1a7c.vsidx
