--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/7b58980c-8082-4232-9018-a0c28bd3421e.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/bd192a43-655d-4d05-b370-34ce877aca06.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/39c4581c-8669-49ac-80c1-6dd7e2bf1a7c.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/0b8e2f0f-d519-43d9-8914-52e8586d697d.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/e5b4e723-ff5b-4ade-83a0-b5decba0a72c.vsidx
