asignacion de turnos calendario con fechas

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/39c4581c-8669-49ac-80c1-6dd7e2bf1a7c.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/0b8e2f0f-d519-43d9-8914-52e8586d697d.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/e5b4e723-ff5b-4ade-83a0-b5decba0a72c.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/11dc258a-2ad4-4c6f-9b81-9e580c293e9a.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/1d29e408-d85d-4e27-aedd-1bcfab9045b2.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/f8f5779e-d597-4750-9957-376d13d2445e.vsidx
