--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DaoMedico.cs" />
     <Compile Include="DaoPacientes.cs" />
     <Compile Include="DaoProvincias.cs" />
+    <Compile Include="DaoTurnos.cs" />
     <Compile Include="DaoUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
