--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="NegocioMedicos.cs" />
     <Compile Include="NegocioPacientes.cs" />
     <Compile Include="NegocioProvincias.cs" />
+    <Compile Include="NegocioTurnos.cs" />
     <Compile Include="NegocioUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
