alta turno, no aparecen horarios ya tomados

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/11dc258a-2ad4-4c6f-9b81-9e580c293e9a.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/1d29e408-d85d-4e27-aedd-1bcfab9045b2.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/f8f5779e-d597-4750-9957-376d13d2445e.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/30b114a1-cb79-493a-9d46-7bff3b694c40.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/3c32f82e-db56-402c-a1d1-3843578019cb.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/751d1b0a-3eeb-490f-a9d4-8cbd98b1351a.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/3fcb1836-03cd-475e-bd48-37dbc961f4a5.vsidx
