--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/3c32f82e-db56-402c-a1d1-3843578019cb.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/751d1b0a-3eeb-490f-a9d4-8cbd98b1351a.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/3fcb1836-03cd-475e-bd48-37dbc961f4a5.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/6236ffeb-e3f9-41a5-8f93-deb66f7d778b.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/e14be930-b8c6-4914-8f06-cbeb699f41b7.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/ff885b37-c7c0-412f-9116-072ce1b439e6.vsidx
