--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/6236ffeb-e3f9-41a5-8f93-deb66f7d778b.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/e14be930-b8c6-4914-8f06-cbeb699f41b7.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/ff885b37-c7c0-412f-9116-072ce1b439e6.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/ea99ea56-69a4-4a23-ac77-bf88eaeb283e.vsidx
