--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/ff885b37-c7c0-412f-9116-072ce1b439e6.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/ea99ea56-69a4-4a23-ac77-bf88eaeb283e.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/562b9926-77d9-4aad-9deb-55bd273ecea6.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/5daef2a6-9c2c-4a53-b54f-3e7a0487ffd3.vsidx
