actualizar, eliminar y agregar jornada de medico

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/562b9926-77d9-4aad-9deb-55bd273ecea6.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/5daef2a6-9c2c-4a53-b54f-3e7a0487ffd3.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/c7071d7c-db27-4067-bc4d-189e2c1c81c1.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/3f60b661-4942-4dda-bf50-a25e1418a07f.vsidx
