--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/5daef2a6-9c2c-4a53-b54f-3e7a0487ffd3.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/c7071d7c-db27-4067-bc4d-189e2c1c81c1.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/3f60b661-4942-4dda-bf50-a25e1418a07f.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/f23fd2e4-a9f0-4933-8b12-7a2cf034eb4e.vsidx
