--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/3f60b661-4942-4dda-bf50-a25e1418a07f.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/f23fd2e4-a9f0-4933-8b12-7a2cf034eb4e.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/00845469-2176-493f-aac2-92cc73947633.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/6dd1a22f-d05d-432a-99df-557c98619301.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/716eee9c-6439-493b-9dc4-3cdff45f61f0.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/b17effb7-fd8a-411a-8047-e9befb46c395.vsidx
