--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 .vs/TP Integrador - Jano Guerra/FileContentIndex/3f60b661-4942-4dda-bf50-a25e1418a07f.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/f23fd2e4-a9f0-4933-8b12-7a2cf034eb4e.vsidx
 .vs/TP Integrador - Jano Guerra/FileContentIndex/00845469-2176-493f-aac2-92cc73947633.vsidx
+.vs/TP Integrador - Jano Guerra/FileContentIndex/4a274821-7d99-444e-ae73-c3b630a497f0.vsidx
+*.vsidx
